be typing, be service-repo pattern
